--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,6 @@ android.nonTransitiveRClass=true
 org.gradle.jvmargs=-Xmx4608m  -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
-#android.defaults.buildfeatures.buildconfig=true
 kotlin.code.style=official
 org.gradle.kotlin.dsl.allWarningsAsErrors=true
 kapt.classloaders.cache.size=5
@@ -28,4 +27,5 @@ kapt.include.compile.classpath=false
 android.suppressUnsupportedCompileSdk=34
 android.nonFinalResIds=true
 org.gradle.unsafe.configuration-cache=true
+#android.enableSeparateAnnotationProcessing=true
 
