--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,8 @@
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-org.gradle.jvmargs=-Xmx4608m  -Dfile.encoding=UTF-8
+android.enableR8.fullMode=false
+org.gradle.jvmargs=-Xms1024m -Xmx4096m
 android.useAndroidX=true
 android.enableJetifier=true
 kotlin.code.style=official
@@ -27,5 +28,6 @@ kapt.include.compile.classpath=false
 android.suppressUnsupportedCompileSdk=34
 android.nonFinalResIds=true
 org.gradle.unsafe.configuration-cache=false
+android.experimental.dependency.excludeLibraryComponentsFromConstraints=false
 #android.enableSeparateAnnotationProcessing=true
 
