--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <application>
+    <application
+            android:usesCleartextTraffic="true"
+            tools:targetApi="m">
         <activity
             android:name="com.arch.presentation.activity.MainActivity"
             android:clearTaskOnLaunch="true"
