--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
-            android:usesCleartextTraffic="true"
-            tools:targetApi="m">
+            android:usesCleartextTraffic="true">
         <activity
             android:name="com.arch.presentation.activity.MainActivity"
             android:clearTaskOnLaunch="true"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustPan"
             android:screenOrientation="portrait"
-            android:exported="true"
-            tools:ignore="DiscouragedApi">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
