--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
@@ -16,8 +14,7 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.AndroidKTSSkeletonBase"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:hardwareAccelerated="true"
-        tools:targetApi="31">
+        android:hardwareAccelerated="true">
 
     </application>
 
