--- a/test/src/main/AndroidManifest.xml
+++ b/test/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
-        android:name=".AppTest"
         android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,7 +13,6 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.AndroidKTSSkeletonBase"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:hardwareAccelerated="true"
-        tools:targetApi="31">
+        android:hardwareAccelerated="true">
     </application>
 </manifest>
